fix(emulsif-67): fix spacing-2xl variable

--- a/src/stylesheets/mixins.scss
+++ b/src/stylesheets/mixins.scss
@@ -62,7 +62,7 @@ $outer-container-break: var(--breakpoint-sm);
   $color-link: inherit,
   $color-link-hover: inherit,
   $font-weight: 700,
-  $margin: var(--spacing-xxl) 0 var(--spacing-lg)) {
+  $margin: var(--spacing-2xl) 0 var(--spacing-lg)) {
   color: $color;
   font-family: $font-family;
   font-weight: $font-weight;
@@ -88,7 +88,7 @@ $outer-container-break: var(--breakpoint-sm);
   $color-link: inherit,
   $color-link-hover: inherit,
   $font-weight: 700,
-  $margin: var(--spacing-xxl) 0 var(--spacing-lg)) {
+  $margin: var(--spacing-2xl) 0 var(--spacing-lg)) {
   color: $color;
   font-family: $font-family;
   font-weight: $font-weight;
@@ -114,7 +114,7 @@ $outer-container-break: var(--breakpoint-sm);
   $color-link: inherit,
   $color-link-hover: inherit,
   $font-weight: 700,
-  $margin: var(--spacing-xxl) 0 var(--spacing-lg)) {
+  $margin: var(--spacing-2xl) 0 var(--spacing-lg)) {
   color: $color;
   font-family: $font-family;
   font-weight: $font-weight;
@@ -140,7 +140,7 @@ $outer-container-break: var(--breakpoint-sm);
   $color-link: inherit,
   $color-link-hover: inherit,
   $font-weight: 600,
-  $margin: var(--spacing-xxl) 0 var(--spacing-lg)) {
+  $margin: var(--spacing-2xl) 0 var(--spacing-lg)) {
   color: $color;
   font-family: $font-family;
   font-weight: $font-weight;
@@ -166,7 +166,7 @@ $outer-container-break: var(--breakpoint-sm);
   $color-link: inherit,
   $color-link-hover: inherit,
   $font-weight: 600,
-  $margin: var(--spacing-xxl) 0 var(--spacing-lg)) {
+  $margin: var(--spacing-2xl) 0 var(--spacing-lg)) {
   color: $color;
   font-family: $font-family;
   font-weight: $font-weight;
